[package]
name = "xylograph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

# https://github.com/bevyengine/bevy/blob/main/docs/cargo_features.md
# https://github.com/bevyengine/bevy/blob/1c5c94715cb17cda5ae209eef12a938501de90b5/Cargo.toml

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
    #"animation",
    "bevy_asset",
    #"bevy_audio",
    #"bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    #"bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    #"bevy_ui",
    #"png",
    #"hdr",
    #"ktx2",
    #"zstd",
    #"vorbis",
    #"x11",
    #"filesystem_watcher",
    #"android_shared_stdcxx",
    #"tonemapping_luts",
    ### non-default,
    "jpeg",
]